force-app/main/default/objects/LBS__c/LBS__c.object-meta.xml
<CustomObject>
    <label>LBS</label>
    <nameField>
        <label>LBS ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>