force-app/main/default/objects/LBS__c/fields/BiddingDeadline__c.field-meta.xml
<CustomField>
    <fullName>BiddingDeadline__c</fullName>
    <label>Bidding Deadline</label>
    <type>Date</type>
</CustomField>