force-app/main/default/objects/LBS__c/fields/cRevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>cRevenueEndDate__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>