force-app/main/default/objects/LBS__c/fields/cRevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>cRevenueStartDate__c</fullName>
    <description>(계약)매출 시작일</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>