force-app/main/default/objects/LBS__c/fields/LBSStatus__c.field-meta.xml
<CustomField>
    <fullName>LBSStatus__c</fullName>
    <description>LBS Status</description>
    <label>LBS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REQ</fullName>
                <label>(Bidding) Requested</label>
            </value>
            <value>
                <fullName>ONGO</fullName>
                <label>(Bidding) Ongoing</label>
            </value>
            <value>
                <fullName>PASS</fullName>
                <label>(Bidding) Passed</label>
            </value>
            <value>
                <fullName>BREJ</fullName>
                <label>(Bidding) Rejected</label>
            </value>
            <value>
                <fullName>BREG</fullName>
                <label>(Bidding) Saved</label>
            </value>
            <value>
                <fullName>BRJQ</fullName>
                <label>(Bidding) Modify Request</label>
            </value>
            <value>
                <fullName>FREQ</fullName>
                <label>(Final) Requested</label>
            </value>
            <value>
                <fullName>FCHK</fullName>
                <label>(Final) Checking</label>
            </value>
            <value>
                <fullName>CMPT</fullName>
                <label>(Final) Completed</label>
            </value>
            <value>
                <fullName>FREJ</fullName>
                <label>(Final) Rejected</label>
            </value>
            <value>
                <fullName>FREG</fullName>
                <label>(Final) Saved</label>
            </value>
            <value>
                <fullName>FRJQ</fullName>
                <label>(Final) Modify Request</label>
            </value>
            <value>
                <fullName>DEL</fullName>
                <label>Deleted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>