force-app/main/default/objects/LBS__c/fields/LegalReviewNo__c.field-meta.xml
<CustomField>
    <fullName>LegalReviewNo__c</fullName>
    <description>법무검토번</description>
    <label>Legal Review No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>