force-app/main/default/objects/LBS__c/fields/LogisticsServiceType__c.field-meta.xml
<CustomField>
    <fullName>LogisticsServiceType__c</fullName>
    <label>Logistics Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Air</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Sea</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Truck</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Rail</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Express</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Warehouse</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Etc.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>