force-app/main/default/objects/LBS__c/fields/OppLbsKey__c.field-meta.xml
<CustomField>
    <fullName>OppLbsKey__c</fullName>
    <formula>CASESAFEID(Opportunity__c) + &apos;_&apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Lbs Key</label>
    <type>Text</type>
</CustomField>