force-app/main/default/objects/LBS__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>01
02</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>New Opportunity</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Retention</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>